--- a/index.html
+++ b/index.html
@@ -2,55 +2,85 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>Ferrari Audio Visualizer</title>
+<title>Ferrari Neon Visualizer</title>
 
 <style>
 body {
     margin: 0;
-    background: black;
+    background: radial-gradient(circle at center, #0a0a0a 0%, #000 80%);
     display: flex;
     flex-direction: column;
-    justify-content: center;
     align-items: center;
+    justify-content: center;
     height: 100vh;
+    overflow: hidden;
+    font-family: Arial, sans-serif;
 }
 
+/* Visualizer container */
 .visualizer-container {
     position: relative;
-    width: 500px;
-    height: 500px;
+    width: 550px;
+    height: 550px;
 }
 
+/* Ferrari image */
 .visualizer-container img {
     position: absolute;
-    width: 300px;
+    width: 320px;
     left: 50%;
     top: 50%;
     transform: translate(-50%, -50%);
-    z-index: 2;
+    z-index: 3;
+    filter: drop-shadow(0 0 25px red);
 }
 
+/* Canvas */
 canvas {
     position: absolute;
     left: 0;
     top: 0;
-    z-index: 1;
+    z-index: 2;
 }
 
-.controls {
-    margin-top: 20px;
+/* Glow background circle */
+.center-glow {
+    position: absolute;
+    width: 350px;
+    height: 350px;
+    background: radial-gradient(circle, rgba(255,0,0,0.4) 0%, rgba(255,0,0,0.1) 50%, transparent 70%);
+    border-radius: 50%;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 1;
+    animation: pulse 2s infinite ease-in-out;
 }
-button {
-    padding: 10px 20px;
-    margin: 5px;
-    background: red;
+
+@keyframes pulse {
+    0% { transform: translate(-50%, -50%) scale(1); opacity: 0.6; }
+    50% { transform: translate(-50%, -50%) scale(1.1); opacity: 1; }
+    100% { transform: translate(-50%, -50%) scale(1); opacity: 0.6; }
+}
+
+/* Controls */
+.controls {
+    margin-top: 25px;
+}
+
+button, input {
+    padding: 10px 18px;
+    margin: 6px;
+    background: linear-gradient(45deg, red, darkred);
     border: none;
     color: white;
     font-weight: bold;
     cursor: pointer;
+    border-radius: 6px;
 }
+
 button:hover {
-    background: darkred;
+    background: linear-gradient(45deg, #ff1a1a, red);
 }
 </style>
 </head>
@@ -58,8 +88,9 @@ button:hover {
 <body>
 
 <div class="visualizer-container">
+    <div class="center-glow"></div>
     <img src="ferrari.png" alt="Ferrari">
-    <canvas id="canvas" width="500" height="500"></canvas>
+    <canvas id="canvas" width="550" height="550"></canvas>
 </div>
 
 <div class="controls">
@@ -75,6 +106,8 @@ const ctx = canvas.getContext("2d");
 const audioInput = document.getElementById("audioFile");
 
 let audio = new Audio();
+audio.loop = true; // auto-loop
+
 let audioContext;
 let analyser;
 let dataArray;
@@ -93,7 +126,7 @@ audioInput.addEventListener("change", function() {
     source.connect(analyser);
     analyser.connect(audioContext.destination);
 
-    analyser.fftSize = 256;
+    analyser.fftSize = 512;
     const bufferLength = analyser.frequencyBinCount;
     dataArray = new Uint8Array(bufferLength);
 });
@@ -129,12 +162,12 @@ function animate() {
 
     const centerX = canvas.width / 2;
     const centerY = canvas.height / 2;
-    const radius = 180;
+    const radius = 200;
 
     for (let i = 0; i < dataArray.length; i++) {
         const value = dataArray[i];
         const percent = value / 255;
-        const barHeight = 60 * percent;
+        const barHeight = 100 * percent;
 
         const angle = (i / dataArray.length) * Math.PI * 2;
 
@@ -144,8 +177,14 @@ function animate() {
         const x2 = centerX + Math.cos(angle) * (radius + barHeight);
         const y2 = centerY + Math.sin(angle) * (radius + barHeight);
 
-        ctx.strokeStyle = "red";
+        const gradient = ctx.createLinearGradient(x1, y1, x2, y2);
+        gradient.addColorStop(0, "#ff0000");
+        gradient.addColorStop(1, "#ff6600");
+
+        ctx.strokeStyle = gradient;
         ctx.lineWidth = 3;
+        ctx.shadowBlur = 20;
+        ctx.shadowColor = "red";
 
         ctx.beginPath();
         ctx.moveTo(x1, y1);
