--- a/index.html
+++ b/index.html
@@ -2,102 +2,57 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>Ferrari Neon Visualizer</title>
+<title>Ferrari Audio Visualizer</title>
 
 <style>
 body {
     margin: 0;
-    background: radial-gradient(circle at center, #0a0a0a 0%, #000 80%);
+    background: black;
     display: flex;
     flex-direction: column;
-    align-items: center;
     justify-content: center;
+    align-items: center;
     height: 100vh;
-    overflow: hidden;
-    font-family: Arial, sans-serif;
 }
 
-/* Visualizer container */
-.visualizer-container {
+.container {
     position: relative;
-    width: 550px;
-    height: 550px;
+    width: 500px;
+    height: 500px;
 }
 
-/* Ferrari image */
-.visualizer-container img {
+.container img {
     position: absolute;
-    width: 320px;
+    width: 300px;
     left: 50%;
     top: 50%;
     transform: translate(-50%, -50%);
-    z-index: 3;
-    filter: drop-shadow(0 0 25px red);
+    z-index: 2;
 }
 
-/* Canvas */
 canvas {
     position: absolute;
     left: 0;
     top: 0;
-    z-index: 2;
-}
-
-/* Glow background circle */
-.center-glow {
-    position: absolute;
-    width: 350px;
-    height: 350px;
-    background: radial-gradient(circle, rgba(255,0,0,0.4) 0%, rgba(255,0,0,0.1) 50%, transparent 70%);
-    border-radius: 50%;
-    left: 50%;
-    top: 50%;
-    transform: translate(-50%, -50%);
     z-index: 1;
-    animation: pulse 2s infinite ease-in-out;
 }
 
-@keyframes pulse {
-    0% { transform: translate(-50%, -50%) scale(1); opacity: 0.6; }
-    50% { transform: translate(-50%, -50%) scale(1.1); opacity: 1; }
-    100% { transform: translate(-50%, -50%) scale(1); opacity: 0.6; }
-}
-
-/* Controls */
 .controls {
-    margin-top: 25px;
-}
-
-button, input {
-    padding: 10px 18px;
-    margin: 6px;
-    background: linear-gradient(45deg, red, darkred);
-    border: none;
-    color: white;
-    font-weight: bold;
-    cursor: pointer;
-    border-radius: 6px;
-}
-
-button:hover {
-    background: linear-gradient(45deg, #ff1a1a, red);
+    margin-top: 20px;
 }
 </style>
 </head>
 
 <body>
 
-<div class="visualizer-container">
-    <div class="center-glow"></div>
+<div class="container">
+    <!-- MAKE SURE THIS MATCHES YOUR IMAGE FILE NAME -->
     <img src="ferrari.png" alt="Ferrari">
-    <canvas id="canvas" width="550" height="550"></canvas>
+    <canvas id="canvas" width="500" height="500"></canvas>
 </div>
 
 <div class="controls">
     <input type="file" id="audioFile" accept="audio/*">
-    <button onclick="playAudio()">Play</button>
-    <button onclick="pauseAudio()">Pause</button>
-    <button onclick="replayAudio()">Replay</button>
 </div>
 
 <script>
@@ -106,18 +61,16 @@ const ctx = canvas.getContext("2d");
 const audioInput = document.getElementById("audioFile");
 
 let audio = new Audio();
-audio.loop = true; // auto-loop
-
 let audioContext;
 let analyser;
 let dataArray;
-let animationId;
 
 audioInput.addEventListener("change", function() {
     const file = this.files[0];
     if (!file) return;
 
     audio.src = URL.createObjectURL(file);
+    audio.play();
 
     audioContext = new (window.AudioContext || window.webkitAudioContext)();
     const source = audioContext.createMediaElementSource(audio);
@@ -126,35 +79,15 @@ audioInput.addEventListener("change", function() {
     source.connect(analyser);
     analyser.connect(audioContext.destination);
 
-    analyser.fftSize = 512;
+    analyser.fftSize = 256;
     const bufferLength = analyser.frequencyBinCount;
     dataArray = new Uint8Array(bufferLength);
+
+    animate();
 });
 
-function playAudio() {
-    if (!audio.src) return;
-
-    if (audioContext.state === "suspended") {
-        audioContext.resume();
-    }
-
-    audio.play();
-    animate();
-}
-
-function pauseAudio() {
-    audio.pause();
-    cancelAnimationFrame(animationId);
-}
-
-function replayAudio() {
-    audio.currentTime = 0;
-    audio.play();
-    animate();
-}
-
 function animate() {
-    animationId = requestAnimationFrame(animate);
+    requestAnimationFrame(animate);
 
     analyser.getByteFrequencyData(dataArray);
 
@@ -162,12 +95,12 @@ function animate() {
 
     const centerX = canvas.width / 2;
     const centerY = canvas.height / 2;
-    const radius = 200;
+    const radius = 180;
 
     for (let i = 0; i < dataArray.length; i++) {
         const value = dataArray[i];
         const percent = value / 255;
-        const barHeight = 100 * percent;
+        const barHeight = 80 * percent;
 
         const angle = (i / dataArray.length) * Math.PI * 2;
 
@@ -177,14 +110,10 @@ function animate() {
         const x2 = centerX + Math.cos(angle) * (radius + barHeight);
         const y2 = centerY + Math.sin(angle) * (radius + barHeight);
 
-        const gradient = ctx.createLinearGradient(x1, y1, x2, y2);
-        gradient.addColorStop(0, "#ff0000");
-        gradient.addColorStop(1, "#ff6600");
-
-        ctx.strokeStyle = gradient;
-        ctx.lineWidth = 3;
-        ctx.shadowBlur = 20;
-        ctx.shadowColor = "red";
+        // Color changing lines
+        const hue = (i * 4 + Date.now() / 10) % 360;
+        ctx.strokeStyle = "hsl(" + hue + ", 100%, 50%)";
+        ctx.lineWidth = 2;
 
         ctx.beginPath();
         ctx.moveTo(x1, y1);
