--- a/index.html
+++ b/index.html
@@ -1,133 +1,67 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
 <meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Audio Visualizer</title>
+<title>Red Light Visual</title>
 
 <style>
 body {
     margin: 0;
     background: black;
-    overflow: hidden;
     display: flex;
     justify-content: center;
     align-items: center;
     height: 100vh;
 }
 
-canvas {
-    position: absolute;
+.container {
+    position: relative;
+    width: 300px;
+    height: 300px;
 }
 
 #album {
-    position: absolute;
-    width: 240px;
-    height: 240px;
+    width: 100%;
+    height: 100%;
     border-radius: 50%;
     object-fit: cover;
-    box-shadow: 0 0 40px #ff0000;
-    animation: spin 10s linear infinite;
-}
-
-@keyframes spin {
-    from { transform: rotate(0deg); }
-    to { transform: rotate(360deg); }
-}
-
-#fileInput {
     position: absolute;
-    bottom: 30px;
-    color: white;
+    z-index: 2;
+}
+
+.red-glow {
+    position: absolute;
+    width: 300px;
+    height: 300px;
+    border-radius: 50%;
+    background: radial-gradient(circle, rgba(255,0,0,0.8) 0%, rgba(255,0,0,0.3) 40%, rgba(255,0,0,0) 70%);
+    animation: pulse 2s infinite ease-in-out;
+    z-index: 1;
+}
+
+@keyframes pulse {
+    0% {
+        transform: scale(1);
+        opacity: 0.6;
+    }
+    50% {
+        transform: scale(1.3);
+        opacity: 1;
+    }
+    100% {
+        transform: scale(1);
+        opacity: 0.6;
+    }
 }
 </style>
 </head>
+
 <body>
 
-<canvas id="canvas"></canvas>
-
-<!-- IMPORTANT: matches your GitHub file exactly -->
-<img id="album" src="ferrari.png.png" alt="Ferrari">
-
-<input type="file" id="fileInput" accept="audio/*">
-
-<script>
-const canvas = document.getElementById("canvas");
-const ctx = canvas.getContext("2d");
-
-function resizeCanvas() {
-    canvas.width = window.innerWidth;
-    canvas.height = window.innerHeight;
-}
-resizeCanvas();
-window.addEventListener("resize", resizeCanvas);
-
-let audioContext;
-let analyser;
-let dataArray;
-let bufferLength;
-let animationId;
-
-document.getElementById("fileInput").addEventListener("change", function() {
-
-    const file = this.files[0];
-    if (!file) return;
-
-    if (!audioContext) {
-        audioContext = new (window.AudioContext || window.webkitAudioContext)();
-    }
-
-    const audio = new Audio(URL.createObjectURL(file));
-    const source = audioContext.createMediaElementSource(audio);
-
-    analyser = audioContext.createAnalyser();
-    analyser.fftSize = 256;
-
-    bufferLength = analyser.frequencyBinCount;
-    dataArray = new Uint8Array(bufferLength);
-
-    source.connect(analyser);
-    analyser.connect(audioContext.destination);
-
-    audio.play();
-
-    if (animationId) cancelAnimationFrame(animationId);
-    animate();
-});
-
-function animate() {
-    animationId = requestAnimationFrame(animate);
-
-    analyser.getByteFrequencyData(dataArray);
-
-    ctx.clearRect(0, 0, canvas.width, canvas.height);
-
-    const centerX = canvas.width / 2;
-    const centerY = canvas.height / 2;
-    const baseRadius = 180;
-
-    for (let i = 0; i < bufferLength; i++) {
-
-        const angle = (i / bufferLength) * Math.PI * 2;
-        const barHeight = dataArray[i] * 0.7;
-
-        const x1 = centerX + Math.cos(angle) * baseRadius;
-        const y1 = centerY + Math.sin(angle) * baseRadius;
-
-        const x2 = centerX + Math.cos(angle) * (baseRadius + barHeight);
-        const y2 = centerY + Math.sin(angle) * (baseRadius + barHeight);
-
-        ctx.beginPath();
-        ctx.moveTo(x1, y1);
-        ctx.lineTo(x2, y2);
-        ctx.strokeStyle = "#ff0000";
-        ctx.lineWidth = 3;
-        ctx.shadowBlur = 20;
-        ctx.shadowColor = "#ff0000";
-        ctx.stroke();
-    }
-}
-</script>
+<div class="container">
+    <div class="red-glow"></div>
+    <img id="album" src="car.png" alt="Car">
+</div>
 
 </body>
 </html>
