--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>Red Light Visual</title>
+<title>Car Audio Visualizer</title>
 
 <style>
 body {
@@ -12,56 +12,94 @@ body {
     justify-content: center;
     align-items: center;
     height: 100vh;
+    overflow: hidden;
 }
 
-.container {
-    position: relative;
-    width: 300px;
-    height: 300px;
+canvas {
+    position: absolute;
 }
 
 #album {
-    width: 100%;
-    height: 100%;
+    position: absolute;
+    width: 220px;
+    height: 220px;
     border-radius: 50%;
     object-fit: cover;
-    position: absolute;
     z-index: 2;
-}
-
-.red-glow {
-    position: absolute;
-    width: 300px;
-    height: 300px;
-    border-radius: 50%;
-    background: radial-gradient(circle, rgba(255,0,0,0.8) 0%, rgba(255,0,0,0.3) 40%, rgba(255,0,0,0) 70%);
-    animation: pulse 2s infinite ease-in-out;
-    z-index: 1;
-}
-
-@keyframes pulse {
-    0% {
-        transform: scale(1);
-        opacity: 0.6;
-    }
-    50% {
-        transform: scale(1.3);
-        opacity: 1;
-    }
-    100% {
-        transform: scale(1);
-        opacity: 0.6;
-    }
 }
 </style>
 </head>
 
 <body>
 
-<div class="container">
-    <div class="red-glow"></div>
-    <img id="album" src="car.png" alt="Car">
-</div>
+<canvas id="canvas"></canvas>
+<img id="album" src="car.png">
+
+<audio id="audio" src="music.mp3"></audio>
+
+<script>
+const canvas = document.getElementById("canvas");
+const ctx = canvas.getContext("2d");
+
+canvas.width = window.innerWidth;
+canvas.height = window.innerHeight;
+
+const centerX = canvas.width / 2;
+const centerY = canvas.height / 2;
+const radius = 130;
+
+const audio = document.getElementById("audio");
+
+const audioCtx = new (window.AudioContext || window.webkitAudioContext)();
+const analyser = audioCtx.createAnalyser();
+const source = audioCtx.createMediaElementSource(audio);
+
+source.connect(analyser);
+analyser.connect(audioCtx.destination);
+
+analyser.fftSize = 256;
+const bufferLength = analyser.frequencyBinCount;
+const dataArray = new Uint8Array(bufferLength);
+
+document.body.addEventListener("click", () => {
+    audioCtx.resume();
+    audio.play();
+});
+
+function animate() {
+    requestAnimationFrame(animate);
+
+    analyser.getByteFrequencyData(dataArray);
+
+    ctx.clearRect(0, 0, canvas.width, canvas.height);
+
+    const bars = 120;
+
+    for (let i = 0; i < bars; i++) {
+
+        const value = dataArray[i];
+        const barHeight = value * 0.9;
+
+        const angle = (i / bars) * Math.PI * 2;
+
+        const x1 = centerX + Math.cos(angle) * radius;
+        const y1 = centerY + Math.sin(angle) * radius;
+
+        const x2 = centerX + Math.cos(angle) * (radius + barHeight);
+        const y2 = centerY + Math.sin(angle) * (radius + barHeight);
+
+        ctx.strokeStyle = "red";
+        ctx.lineWidth = 3;
+
+        ctx.beginPath();
+        ctx.moveTo(x1, y1);
+        ctx.lineTo(x2, y2);
+        ctx.stroke();
+    }
+}
+
+animate();
+</script>
 
 </body>
 </html>
