--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>Car Audio Visualizer</title>
+<title>Full Circle Audio Visualizer</title>
 
 <style>
 body {
@@ -34,7 +34,6 @@ canvas {
 
 <canvas id="canvas"></canvas>
 <img id="album" src="car.png">
-
 <audio id="audio" src="music.mp3"></audio>
 
 <script>
@@ -46,7 +45,7 @@ canvas.height = window.innerHeight;
 
 const centerX = canvas.width / 2;
 const centerY = canvas.height / 2;
-const radius = 130;
+const baseRadius = 130;
 
 const audio = document.getElementById("audio");
 
@@ -57,10 +56,12 @@ const source = audioCtx.createMediaElementSource(audio);
 source.connect(analyser);
 analyser.connect(audioCtx.destination);
 
-analyser.fftSize = 256;
+analyser.fftSize = 512;
+
 const bufferLength = analyser.frequencyBinCount;
 const dataArray = new Uint8Array(bufferLength);
 
+// Start audio on click
 document.body.addEventListener("click", () => {
     audioCtx.resume();
     audio.play();
@@ -73,23 +74,25 @@ function animate() {
 
     ctx.clearRect(0, 0, canvas.width, canvas.height);
 
-    const bars = 120;
+    const totalBars = 180; // More bars = full circle coverage
 
-    for (let i = 0; i < bars; i++) {
+    for (let i = 0; i < totalBars; i++) {
 
-        const value = dataArray[i];
-        const barHeight = value * 0.9;
+        const index = Math.floor(i * bufferLength / totalBars);
+        const value = dataArray[index];
 
-        const angle = (i / bars) * Math.PI * 2;
+        const barHeight = value * 0.25; // short bars
 
-        const x1 = centerX + Math.cos(angle) * radius;
-        const y1 = centerY + Math.sin(angle) * radius;
+        const angle = (i / totalBars) * Math.PI * 2;
 
-        const x2 = centerX + Math.cos(angle) * (radius + barHeight);
-        const y2 = centerY + Math.sin(angle) * (radius + barHeight);
+        const x1 = centerX + Math.cos(angle) * baseRadius;
+        const y1 = centerY + Math.sin(angle) * baseRadius;
+
+        const x2 = centerX + Math.cos(angle) * (baseRadius + barHeight);
+        const y2 = centerY + Math.sin(angle) * (baseRadius + barHeight);
 
         ctx.strokeStyle = "red";
-        ctx.lineWidth = 3;
+        ctx.lineWidth = 2;
 
         ctx.beginPath();
         ctx.moveTo(x1, y1);
