--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>Ferrari Audio Visualizer</title>
+<title>Ferrari Visualizer</title>
 
 <style>
 body {
@@ -48,7 +48,6 @@ const centerY = canvas.height / 2;
 const baseRadius = 130;
 
 const audio = document.getElementById("audio");
-
 const audioCtx = new (window.AudioContext || window.webkitAudioContext)();
 const analyser = audioCtx.createAnalyser();
 const source = audioCtx.createMediaElementSource(audio);
@@ -56,7 +55,7 @@ const source = audioCtx.createMediaElementSource(audio);
 source.connect(analyser);
 analyser.connect(audioCtx.destination);
 
-analyser.fftSize = 512;
+analyser.fftSize = 256;
 
 const bufferLength = analyser.frequencyBinCount;
 const dataArray = new Uint8Array(bufferLength);
@@ -72,29 +71,16 @@ function animate() {
     analyser.getByteFrequencyData(dataArray);
     ctx.clearRect(0, 0, canvas.width, canvas.height);
 
-    const totalBars = 200;
-    const halfBars = totalBars / 2;
+    const bars = bufferLength;
 
-    for (let i = 0; i < totalBars; i++) {
+    for (let i = 0; i < bars; i++) {
 
-        // Mirror frequencies
-        let mirroredIndex;
+        const value = dataArray[i];
 
-        if (i < halfBars) {
-            mirroredIndex = Math.floor(i * bufferLength / halfBars);
-        } else {
-            mirroredIndex = Math.floor((totalBars - i) * bufferLength / halfBars);
-        }
+        // Strong visible scaling
+        const barHeight = (value / 255) * 80 + 10;
 
-        let value = dataArray[mirroredIndex];
-
-        // Make it stronger + balanced
-        value *= 1.4;
-
-        const minHeight = 8;
-        const barHeight = Math.max(value * 0.25, minHeight);
-
-        const angle = (i / totalBars) * Math.PI * 2;
+        const angle = (i / bars) * Math.PI * 2;
 
         const x1 = centerX + Math.cos(angle) * baseRadius;
         const y1 = centerY + Math.sin(angle) * baseRadius;
